SERVER-9698 Improve error reporting in mongostat when run with insufficient privileges.

With this patch, a user running mongostat without sufficient privilege to
execute serverStatus on the targeted server will see the following message:

<hostname>	serverStatus failed: unauthorized

The mongostat process will _not_ terminate in this circumstance, nor did it
before this patch.

With this patch, a user running mongostat with sufficient privilege to run
serverStatus against an instance of mongos, but without sufficient privilege to
read from the cluster's config.shards collection will periodically see the
following output:

<hostname>	nextSafe(): { $err: "not authorized for query on config.shards", code: 16549 }

The mongostat process will _not_ terminate in this circumstance.  Previous
behavior was to print a stack trace and terminate.